--- a/fw/packages.config
+++ b/fw/packages.config
@@ -4,6 +4,8 @@
   <package id="ExcelDataReader" version="3.4.2" targetFramework="net461" />
   <package id="ExcelDataReader.DataSet" version="3.4.2" targetFramework="net461" />
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net461" />
+  <package id="OpenTK" version="3.0.1" targetFramework="net461" />
+  <package id="OpenTK.GLControl" version="3.0.1" targetFramework="net461" />
   <package id="OxyPlot.Core" version="1.0.0" targetFramework="net461" />
   <package id="OxyPlot.Wpf" version="1.0.0" targetFramework="net461" />
   <package id="PropertyTools.Wpf" version="3.0.0-unstable0141" targetFramework="net461" />
